--- a/src/app/cart/cart-list/cart-list-item/cart-list-item.component.html
+++ b/src/app/cart/cart-list/cart-list-item/cart-list-item.component.html
@@ -1,1 +1,11 @@
-<p>cart-list-item works!</p>
+<mat-card>
+  <mat-card-header
+    ><img mat-card-image [src]="imgUrl" [alt]="name" />
+  </mat-card-header>
+  <mat-card-content>
+    <mat-card-title [innerText]="name"></mat-card-title>
+    <mat-card-subtitle [innerText]="price | currency : '₴'">
+    </mat-card-subtitle>
+  </mat-card-content>
+  <mat-card-actions> </mat-card-actions>
+</mat-card>
