--- a/src/app/home/product-list/product-list-item/product-list-item.component.html
+++ b/src/app/home/product-list/product-list-item/product-list-item.component.html
@@ -7,8 +7,9 @@
   >
     <mat-icon>grade</mat-icon>
   </button>
-  <mat-card-header> </mat-card-header>
-  <img mat-card-image [src]="imgUrl" [alt]="name" />
+  <mat-card-header
+    ><img mat-card-image [src]="imgUrl" [alt]="name" />
+  </mat-card-header>
   <mat-card-content>
     <mat-card-title [innerText]="name"></mat-card-title>
     <mat-card-subtitle [innerText]="price | currency : '₴'">
