--- a/src/app/home/product-list/product-list-item/product-list-item.component.html
+++ b/src/app/home/product-list/product-list-item/product-list-item.component.html
@@ -3,7 +3,7 @@
     class="favorite-icon"
     mat-icon-button
     color="accent"
-    aria-label="heart icon"
+    aria-label="grade icon"
   >
     <mat-icon>grade</mat-icon>
   </button>
