--- a/src/app/home/product-list/product-list.component.html
+++ b/src/app/home/product-list/product-list.component.html
@@ -1,4 +1,5 @@
 <mat-card>
+  <mat-card-header></mat-card-header>
   <mat-card-content>
     @for (item of products; track item.id) {
     <app-product-list-item
