--- a/src/app/home/product-list/product-list.component.scss
+++ b/src/app/home/product-list/product-list.component.scss
@@ -1,9 +1,11 @@
 :host {
   width: 100%;
+  overflow: auto;
+  height: 100%;
 
   mat-card-content {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     gap: 1rem;
   }
 }
