--- a/src/app/cart/cart-list/cart-list-item/cart-list-item.component.html
+++ b/src/app/cart/cart-list/cart-list-item/cart-list-item.component.html
@@ -6,6 +6,11 @@
     <mat-card-title [innerText]="name"></mat-card-title>
     <mat-card-subtitle [innerText]="price | currency : '₴'">
     </mat-card-subtitle>
+    <mat-card-actions>
+      <button mat-button>+</button>
+      <mat-card-subtitle>1</mat-card-subtitle>
+      <button mat-button>-</button>
+    </mat-card-actions>
+    <mat-card-subtitle>Pharmacy: {{ from }}</mat-card-subtitle>
   </mat-card-content>
-  <mat-card-actions> </mat-card-actions>
 </mat-card>
