--- a/src/app/cart/cart-list/cart-list.component.html
+++ b/src/app/cart/cart-list/cart-list.component.html
@@ -7,6 +7,7 @@
       [name]="item.name"
       [price]="item.price"
       [quantity]="item.quantity"
+      [from]="item.from"
     ></app-cart-list-item>
     } @empty {
     <li>There are no items.</li>
