--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,2 +1,8 @@
-<app-order-form></app-order-form>
-<app-cart-list></app-cart-list>
+<div class="cart-component">
+  <app-order-form></app-order-form>
+  <app-cart-list></app-cart-list>
+</div>
+<div class="footer">
+  <span>Total price: <strong>9999</strong></span>
+  <button mat-raised-button>Order now</button>
+</div>
