--- a/src/app/cart/order-form/order-form.component.scss
+++ b/src/app/cart/order-form/order-form.component.scss
@@ -1,5 +1,10 @@
 :host {
-  min-width: 30rem;
+  height: 100%;
+  width: 100%;
+
+  mat-card {
+    height: 100%;
+  }
 
   form {
     display: flex;
