--- a/src/app/home/product-list/product-list-item/product-list-item.component.scss
+++ b/src/app/home/product-list/product-list-item/product-list-item.component.scss
@@ -1,15 +1,28 @@
 :host {
   width: 100%;
 
+  mat-card {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    mat-card-header {
+      height: 10rem;
+      display: flex;
+      justify-content: center;
+
+      img {
+        height: 100%;
+      }
+    }
+  }
+
   .favorite-icon {
     position: absolute;
     right: 0;
     top: 0;
     z-index: 1;
-  }
-
-  img {
-    width: 100%;
   }
 
   mat-card-content {
