wip: added LocalCartService for manage cart in local storage; aded abstract api service and it`s according implamantation for firebase

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,8 +16,12 @@
           color="primary"
           routerLink="/cart"
           routerLinkActive="active"
-          >Cart</a
         >
+          <span>Cart</span>
+          @if (cartCount$ | async; as cartCount) {
+          <span> ({{ cartCount }})</span>
+          }
+        </a>
       </li>
     </ul>
   </nav>
