--- a/src/app/home/product-list/choose-store/choose-store.component.scss
+++ b/src/app/home/product-list/choose-store/choose-store.component.scss
@@ -4,5 +4,10 @@
   mat-card {
     width: 100%;
     height: 100%;
+
+    mat-icon {
+      vertical-align: sub;
+      margin-right: 1rem;
+    }
   }
 }
