--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,2 @@
-<app-store-list></app-store-list> <router-outlet></router-outlet>
+<app-store-list></app-store-list>
+<router-outlet></router-outlet>
