--- a/src/app/home/product-list/choose-store/choose-store.component.html
+++ b/src/app/home/product-list/choose-store/choose-store.component.html
@@ -1,6 +1,8 @@
 <mat-card>
   <mat-card-content>
-    <mat-icon>keyboard_backspace</mat-icon>
-    <mat-card-title>Choose your store</mat-card-title>
+    <mat-card-title
+      ><mat-icon>keyboard_backspace</mat-icon>Choose preferred
+      store</mat-card-title
+    >
   </mat-card-content>
 </mat-card>
