--- a/src/app/home/product-list/product-list-item/product-list-item.component.html
+++ b/src/app/home/product-list/product-list-item/product-list-item.component.html
@@ -8,14 +8,16 @@
     <mat-icon>grade</mat-icon>
   </button>
   <mat-card-header
-    ><img mat-card-image [src]="imgUrl" [alt]="name" />
+    ><img mat-card-image [src]="imgUrl()" [alt]="name()" />
   </mat-card-header>
   <mat-card-content>
-    <mat-card-title [innerText]="name"></mat-card-title>
-    <mat-card-subtitle [innerText]="price | currency : '₴'">
+    <mat-card-title [innerText]="name()"></mat-card-title>
+    <mat-card-subtitle [innerText]="price() | currency : '₴'">
     </mat-card-subtitle>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-raised-button color="primary">Add to Cart</button>
+    <button mat-raised-button color="primary" (click)="addToCart()">
+      Add to Cart
+    </button>
   </mat-card-actions>
 </mat-card>
