--- a/src/app/home/product-list/product-list.component.html
+++ b/src/app/home/product-list/product-list.component.html
@@ -9,7 +9,10 @@
       [name]="item.name"
     ></app-product-list-item>
     } @empty {
-    <span>There are no items.</span>
+    <h2>
+      There are no products.😔 <br />
+      Try another store.
+    </h2>
     }
   </mat-card-content>
 </mat-card>
