--- a/src/app/home/store-list/store-list.component.html
+++ b/src/app/home/store-list/store-list.component.html
@@ -17,7 +17,7 @@
         ></app-store-list-item>
       </a>
       } @empty {
-      <span> There are no items.</span>
+      <h2>There are no stores.😔</h2>
       }
     </mat-nav-list>
   </mat-card-content>
