--- a/src/app/cart/cart-list/cart-list-item/cart-list-item.component.html
+++ b/src/app/cart/cart-list/cart-list-item/cart-list-item.component.html
@@ -7,10 +7,14 @@
     <mat-card-subtitle [innerText]="price | currency : '₴'">
     </mat-card-subtitle>
     <mat-card-actions>
-      <button mat-button>+</button>
-      <mat-card-subtitle>1</mat-card-subtitle>
-      <button mat-button>-</button>
+      <button mat-button (click)="subtract()">
+        <mat-icon>remove</mat-icon>
+      </button>
+      <mat-card-subtitle>{{ quantity }}</mat-card-subtitle>
+      <button mat-button (click)="add()">
+        <mat-icon>add</mat-icon>
+      </button>
     </mat-card-actions>
-    <mat-card-subtitle>Pharmacy: {{ from }}</mat-card-subtitle>
+    <mat-card-subtitle>Store: {{ from }}</mat-card-subtitle>
   </mat-card-content>
 </mat-card>
