--- a/src/app/home/product-list/product-list-item/product-list-item.component.html
+++ b/src/app/home/product-list/product-list-item/product-list-item.component.html
@@ -2,8 +2,9 @@
   <button
     class="favorite-icon"
     mat-icon-button
-    color="accent"
+    [color]="isFavourite() ? 'accent' : 'primary'"
     aria-label="grade icon"
+    (click)="toggleFavourite()"
   >
     <mat-icon>grade</mat-icon>
   </button>
@@ -16,8 +17,13 @@
     </mat-card-subtitle>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-raised-button color="primary" (click)="addToCart()">
-      Add to Cart
+    <button
+      class="add-but"
+      mat-raised-button
+      color="primary"
+      (click)="isInCart() ? goToCart() : addToCart()"
+    >
+      @if (isInCart()) { Go to Cart } @else { Add to Cart }
     </button>
   </mat-card-actions>
 </mat-card>
